# stepcas

./: .gitignore  .opencode.json  AGENTS.md  README.md  TASK.md  opencode.json  program.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: benchmark-engineer.md  chief-architect.md  debug-engineer.md  doc-writer.md  lead-engineer.md  math-architect.md  project-manager.md  prompt-improver.md  test-engineer.md
.opencode/commands/: debug-failure.md  implement-feature.md  plan-feature.md  review-changes.md
company/: README.md  runner.py  tasks.json  watchdog.py
docs/: api-design.md  architecture.md  benchmarks.md  roadmap.md
docs/adr/: 0001-step-first-architecture.md  0002-canonicalization-policy.md  0003-solve-scope-boundaries.md  0004-json-trace-schema-contract.md  0005-error-taxonomy-contract.md  0006-web-endpoint-response-contracts.md  0007-stable-step-metadata-keys.md
scripts/: add-task.ps1  company-status.ps1  oc-debug.ps1  oc-implement.ps1  oc-plan.ps1  start-company.ps1  start-opencode-server.ps1  start-watchdog.ps1  stop-company-notes.txt
src/stepcas/: __init__.py  benchmark.py  cli.py  differentiate.py  errors.py  expand.py  expression.py  json_trace.py  linear_form.py  parser.py  polynomial.py  rewrite.py  simplify.py  solve_linear.py  trace.py  variable_analysis.py  variable_validation.py
tests/: test_benchmark.py  test_cli.py  test_differentiate.py  test_errors.py  test_expand.py  test_json_trace.py  test_linear_form.py  test_parser.py  test_polynomial.py  test_simplify.py  test_solve_linear.py  trace_helpers.py
(+3 files in other folders)
